# tax-etrade

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  demo.py  main.py  pyproject.toml  run_tax_engine.bat  run_tax_engine.command
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: ci.yml
docs/: TAX_CALCULATION_METHOD.md
src/tax_engine/: __init__.py  cli_demo.py  cli_main.py  download_all.py  ecb_rates.py  etrade_download_espp.py  etrade_download_options.py  etrade_download_orders.py  etrade_download_rsu.py  etrade_login.py  models.py  options_parser.py  rsu_parser.py  run_tests.py  sample_data.py  tax_engine.py
tests/: __init__.py  conftest.py  test_ecb_rates.py  test_load_orders.py  test_models.py  test_options_parser.py  test_rsu_parser.py  test_sample_data.py  test_tax_engine.py
