[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-engine"
version = "0.1.0"
description = "Austrian Tax Engine for E-Trade RSUs and ESPP using Moving Average Cost Basis"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.40.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
tax-download-all = "tax_engine.download_all:main"
tax-login = "tax_engine.etrade_login:login"
tax-espp = "tax_engine.etrade_download_espp:download_benefit_history"
tax-orders = "tax_engine.etrade_download_orders:download_orders"
tax-rsu = "tax_engine.etrade_download_rsu:download_rsu_confirmations"
tax-calc = "tax_engine.cli_main:main"
tax-demo = "tax_engine.cli_demo:main"
tax-test = "tax_engine.run_tests:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
