[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-engine"
version = "0.1.0"
description = "Austrian Tax Engine for E-Trade RSUs and ESPP using Moving Average Cost Basis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["tax", "austria", "espp", "rsu", "capital-gains", "kest"]
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "playwright>=1.40.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.0",
    "pandas-stubs>=2.2.0",
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
    "types-requests>=2.32.0",
]

[project.scripts]
tax-download-all = "tax_engine.download_all:main"
tax-login = "tax_engine.etrade_login:login"
tax-espp = "tax_engine.etrade_download_espp:download_benefit_history"
tax-orders = "tax_engine.etrade_download_orders:download_orders"
tax-rsu = "tax_engine.etrade_download_rsu:download_rsu_confirmations"
tax-calc = "tax_engine.cli_main:main"
tax-demo = "tax_engine.cli_demo:main"
tax-test = "tax_engine.run_tests:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tax_engine"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
